--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
                 <div class="parametro-senha">
                     <h4 class="parametro-senha__titulo">Número de caracteres</h4>
                 <div class="parametro-senha-botões">
-
+                    <button class="parametro-senha__botao">-</button>
+<p class="parametro-senha__botoes"></p>
+                    <button class="parametro-senha__botao">+</button>
                 </div>
                 </div>                
                 <div class="parametro-senha">
